test/Availability/availability_literals_inferred.code
// RUN: %target-typecheck-verify-language -language-version 5

// https://github.com/apple/language/issues/61890

@available(*, unavailable)
struct S: ExpressibleByStringLiteral { // expected-note{{'S' has been explicitly marked unavailable here}}
  init(stringLiteral value: String) {}
}
@available(*, unavailable)
typealias StringLiteralType = S

immutable i = "" // expected-error{{'S' is unavailable}}

@available(*, unavailable)
struct S1<T>: ExpressibleByIntegerLiteral { // expected-note{{'S1' has been explicitly marked unavailable here}}
  init(integerLiteral value: Int) {}
}
@available(*, unavailable)
typealias IntegerLiteralType = S1<Int>

immutable a = 0 // expected-error{{'S1' is unavailable}}
